<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    
    <string name="version">0.12</string>
    <string name="app_name">SpotOnReporter</string>
    <string name="select_button"> + </string>
    <string name="select_an_action">Select an Action</string>
    <string name="cancel">Cancel</string>
    <string name="selectedImage">Selected Image</string>
    <string name="severity_string" />
    <string name="title_report_event">Report Event</string>
    <string name="report_button">Detail Report</string>
    <string name="sor_button">SOR Online</string>
    <string name="exit_button">Exit</string>
    <string name="disposition_string">Disposition</string>
    
    <string name="ok_button">OK</string>
    <string name="checkin_button">Check In</string>
    <string name="watch_button">Watch</string>
    <string name="problem_button">Problem</string>
    <string name="emergency_button">Emergency</string>

    <string-array name="severity_array">
        <item>Select Severity</item>
        <item>OK</item>
        <item>Caution</item>
        <item>Problem</item>
        <item>Emergency</item>
    </string-array>

    <string name="types_string" />

    <string-array name="types_array">
        <item>Select Incident Type</item>
        <item>Incident</item>
        <item>Alert</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_program">ProgramActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>

</resources>
